--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "vue-router": "^4.1.6"
   },
   "devDependencies": {
+    "@volar-plugins/vetur": "latest",
     "@rushstack/eslint-patch": "^1.1.4",
     "@vitejs/plugin-vue": "^4.0.0",
     "@vue/eslint-config-prettier": "^7.0.0",
