--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,16 +9,19 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore"
   },
   "dependencies": {
+    "@hcaptcha/vue3-hcaptcha": "^1.2.1",
     "axios": "^1.3.2",
     "bootstrap": "^5.2.3",
     "pinia": "^2.0.28",
+    "vee-validate": "^4.7.4",
     "vue": "^3.2.45",
-    "vue-router": "^4.1.6"
+    "vue-router": "^4.1.6",
+    "yup": "^1.0.0"
   },
   "devDependencies": {
-    "@volar-plugins/vetur": "latest",
     "@rushstack/eslint-patch": "^1.1.4",
     "@vitejs/plugin-vue": "^4.0.0",
+    "@volar-plugins/vetur": "latest",
     "@vue/eslint-config-prettier": "^7.0.0",
     "eslint": "^8.22.0",
     "eslint-plugin-vue": "^9.3.0",
