--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -8,7 +8,6 @@ pnpm-debug.log*
 lerna-debug.log*
 
 node_modules
-config
 .DS_Store
 dist
 dist-ssr
@@ -27,5 +26,5 @@ coverage
 *.njsproj
 *.sln
 *.sw?
-/.env
+.env
 akk.txt
