--- a/backend/.env
+++ b/backend/.env
@@ -1,7 +1,7 @@
 PORT=5000
 SMTP_HOST="smtp.gmail.com"
 SMTP_PORT=587
-SMTP_USER=pochta
-SMTP_PASSWORD=password
+SMTP_USER=zavigrey123@gmail.com
+SMTP_PASSWORD=xiukkdxyejwlmntb
 API_URL=http://localhost:5000
 CLIENT_URL=http://localhost:5173
